--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "reactjs-file-preview": "^1.0.6",
     "sonner": "^2.0.6"
   },
   "devDependencies": {
