--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@types/node": "^24.1.0",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^17.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
